--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="/scripts/config.js" defer></script>
     <script src="/scripts/game.js" defer></script>
     <script src="/scripts/app.js" defer></script>
-    <title>Tick Tack Toe</title>
+    <title>Tic Tac Toe</title>
   </head>
   <body>
     <div id="backdrop"></div>
@@ -44,19 +44,31 @@
       <section id="game-configuration">
         <ol>
           <li>
-            <article>
+            <article id="player-1-data">
               <h2>Player 1</h2>
               <h3>PLAYER NAME</h3>
               <p class="player-symbol">X</p>
-              <button class="btn btn-alt" id="edit-player-1-btn">Edit</button>
+              <button
+                class="btn btn-alt"
+                id="edit-player-1-btn"
+                data-playerid="1"
+              >
+                Edit
+              </button>
             </article>
           </li>
           <li>
-            <article>
+            <article id="player-2-data">
               <h2>Player 2</h2>
               <h3>PLAYER NAME</h3>
               <p class="player-symbol">O</p>
-              <button class="btn btn-alt" id="edit-player-2-btn">Edit</button>
+              <button
+                class="btn btn-alt"
+                id="edit-player-2-btn"
+                data-playerid="2"
+              >
+                Edit
+              </button>
             </article>
           </li>
         </ol>
